--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -15,7 +14,7 @@
 body {
   background-color: #ffffff;
   color: #32a9cd;
-  font-family: "ヒラギノ角ゴシック", serif;
+  font-family: "ヒラギノ角ゴシック", sans-serif;
   line-height: 1.8;
   display: flex;
   flex-direction: column;
@@ -30,6 +29,7 @@ body {
       background-color: #32a9cd;
       color: #fff;
       flex-shrink: 0;
+      gap: 2em;
     }
     .title-wrapper {
       display: flex;
@@ -67,6 +67,14 @@ body {
     .search {
       display: flex;
       align-items: center;
+      gap: 0.5em;
+      flex-shrink: 0;
+      margin-left: auto;
+    }
+    .search form {
+      display: flex;
+      align-items: center;
+      gap: 0.5em;
     }
     .search input {
       padding: 4px;
@@ -81,12 +89,13 @@ body {
     }
     .search button {
       padding: 4px 6px;
-      margin-left: 4px;
       border-radius: 4px;
       border: none;
       background-color: #003366;
       color: #fff;
       cursor: pointer;
+      white-space: nowrap;
+      flex-shrink: 0;
     }
     .search button:hover {
       background-color: #001f33;
@@ -97,12 +106,15 @@ body {
       padding: 1em 0;
       background-color: #f0f0f0;
       flex-shrink: 0;
+      overflow-x: auto;
     }
     nav a {
       color: #003366;
       margin: 0 1em;
       text-decoration: none;
       font-weight: bold;
+      display: inline-block;
+      white-space: nowrap;
     }
     nav a:hover {
       color: #32a9cd;
@@ -198,6 +210,7 @@ body {
     .checkbox-item input[type="checkbox"] {
       margin-right: 1em;
       transform: scale(1.2);
+      flex-shrink: 0;
     }
 
     .radio-item.selected,
@@ -282,6 +295,8 @@ body {
       cursor: pointer;
       transition: all 0.3s ease;
       box-shadow: 0 4px 15px rgba(50, 169, 205, 0.3);
+      width: 100%;
+      max-width: 300px;
     }
 
     .submit-btn:hover {
@@ -308,14 +323,138 @@ body {
 
     /* レスポンシブ */
     @media (max-width: 768px) {
-      .content {
-        padding: 0 1em;
+      header {
+        padding: 1em;
+        justify-content: center;
+        text-align: center;
       }
+
       header h1 {
         font-size: 2em;
       }
+
+      .search {
+        width: 100%;
+      }
+
+      .search input {
+        width: 100%;
+        flex: 1;
+      }
+
+      nav a {
+        margin: 0 0.5em;
+        font-size: 0.9em;
+      }
+
+      .content {
+        padding: 0 1em;
+        margin: 1em auto;
+      }
+
+      .page-title {
+        margin: 1em 0;
+        padding: 1em;
+      }
+
+      .page-title h1 {
+        font-size: 1.8em;
+      }
+
+      .page-title p {
+        font-size: 1em;
+      }
+
       .form-container {
         padding: 1.5em;
+        box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      }
+
+      .form-group label {
+        font-size: 1em;
+      }
+
+      .radio-item,
+      .checkbox-item {
+        padding: 0.6em;
+      }
+
+      .radio-item input[type="radio"],
+      .checkbox-item input[type="checkbox"] {
+        margin-right: 0.8em;
+      }
+
+      .submit-btn {
+        padding: 0.8em 2em;
+        font-size: 1em;
+      }
+    }
+
+    @media (max-width: 480px) {
+      header {
+        flex-direction: column;
+        gap: 0.5em;
+      }
+
+      header h1 {
+        font-size: 1.5em;
+      }
+
+      .subtitle {
+        font-size: 0.9em;
+      }
+
+      .search {
+        width: 100%;
+      }
+
+      .search input {
+        width: 100%;
+        padding: 0.5em;
+      }
+
+      .search button {
+        padding: 0.5em 0.8em;
+        font-size: 0.9em;
+      }
+
+      nav a {
+        margin: 0 0.3em;
+        font-size: 0.8em;
+      }
+
+      .content {
+        padding: 0 0.8em;
+        margin: 0.8em auto;
+      }
+
+      .page-title h1 {
+        font-size: 1.5em;
+      }
+
+      .form-container {
+        padding: 1em;
+      }
+
+      .form-group label {
+        font-size: 0.95em;
+      }
+
+      .form-container input[type="text"],
+      .form-container input[type="number"],
+      .form-container textarea {
+        padding: 0.8em;
+        font-size: 16px;
+      }
+
+      textarea {
+        height: 100px;
+      }
+
+      .submit-btn {
+        padding: 0.8em 1.5em;
+        font-size: 0.95em;
+        max-width: 100%;
       }
     }
   </style>
@@ -356,19 +495,19 @@ body {
             <option value="">書籍を選択してください</option>
             <option value="美術の穴">美術の穴</option>
             <option value="RPGさんぽ入門">RPGさんぽ入門</option>
-            <option value="コンクールとコンテスト">コンクールとコンテスト</option>
+            <option value="コンクール＆コンテスト">コンクール＆コンテスト</option>
             <option value="鳥の目 虫の目 魚の目">鳥の目 虫の目 魚の目</option>
             <option value="光輪-Nimbus-">光輪-Nimbus-</option>
             <option value="What is Brown noise?">What is Brown noise?</option>
             <option value="ひのまる構図">ひのまる構図</option>
             <option value="黒子を星座に">黒子を星座に</option>
             <option value="RPGさんぽ概説">RPGさんぽ概説</option>
-            <option value="日本の鏡スポット">日本の鏡スポット</option>
+            <option value="日本の顔スポット">日本の顔スポット</option>
             <option value="千年幸福論">千年幸福論</option>
             <option value="カレーのご飯は冷たい方が美味しい">カレーのご飯は冷たい方が美味しい</option>
             <option value="LIMINAL SPACE 100">LIMINAL SPACE 100</option>
             <option value="花火禁止区域ができるまで">花火禁止区域ができるまで</option>
-            <option value="遅刻しないために">遅刻しないために</option>
+            <option value="配嫌しないために">配嫌しないために</option>
           </select>
         </div>
 
@@ -404,7 +543,7 @@ body {
               </div>
               <div class="radio-item" onclick="selectRadio('issue_type', 'typo')">
                 <input type="radio" name="issue_type" value="typo" id="typo">
-                <label for="typo">誤植(誤字・脱字)</label>
+                <label for="typo">誤字(誤字・脱字)</label>
               </div>
               <div class="radio-item" onclick="selectRadio('issue_type', 'binding')">
                 <input type="radio" name="issue_type" value="binding" id="binding">
@@ -493,7 +632,7 @@ body {
 
     function showPDFConfirmPage() {
       document.body.innerHTML = `
-        <header style="display: flex; justify-content: space-between; align-items: center; padding: 1em 2em; background-color: #32a9cd; color: #fff; flex-shrink: 0;">
+        <header style="display: flex; justify-content: space-between; align-items: center; padding: 1em 2em; background-color: #32a9cd; color: #fff; flex-shrink: 0; flex-wrap: wrap; gap: 1em;">
           <div style="display: flex; flex-direction: column;">
             <h1 style="margin: 0; font-size: 3em; letter-spacing: 0.1em; line-height: 1; border: none; font-family: 'Tsunagi Gothic Black', sans-serif; font-weight: 700; color: #fff;">狭間書房</h1>
             <p style="margin: 0; padding: 0; line-height: 1; font-size: 1em; text-align: center; color: #fff;">Hazama Publishing</p>
@@ -533,7 +672,7 @@ body {
 
     function showThankYouPage() {
       document.body.innerHTML = `
-        <header style="display: flex; justify-content: space-between; align-items: center; padding: 1em 2em; background-color: #32a9cd; color: #fff; flex-shrink: 0;">
+        <header style="display: flex; justify-content: space-between; align-items: center; padding: 1em 2em; background-color: #32a9cd; color: #fff; flex-shrink: 0; flex-wrap: wrap; gap: 1em;">
           <div style="display: flex; flex-direction: column;">
             <h1 style="margin: 0; font-size: 3em; letter-spacing: 0.1em; line-height: 1; border: none; font-family: 'Tsunagi Gothic Black', sans-serif; font-weight: 700; color: #fff;">狭間書房</h1>
             <p style="margin: 0; padding: 0; line-height: 1; font-size: 1em; text-align: center; color: #fff;">Hazama Publishing</p>
