--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@ body {
       color: #fff;
       flex-shrink: 0;
       gap: 2em;
+      box-sizing: border-box;
+      width: 100%;
     }
     .title-wrapper {
       display: flex;
@@ -109,6 +111,8 @@ body {
       background-color: #f0f0f0;
       flex-shrink: 0;
       overflow-x: auto;
+      box-sizing: border-box;
+      width: 100%;
     }
     nav a {
       color: #003366;
@@ -132,6 +136,7 @@ body {
   padding: 0 1em;
   flex: 1;
   width: 100%;
+  box-sizing: border-box;
     }
 
     /* ページタイトル */
@@ -161,6 +166,7 @@ body {
       padding: 2em;
       border-radius: 12px;
       box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+      box-sizing: border-box;
     }
 
     .form-group {
@@ -321,6 +327,8 @@ body {
       padding: 1em;
       flex-shrink: 0;
       margin-top: auto;
+      box-sizing: border-box;
+      width: 100%;
     }
 
     /* レスポンシブ */
