--- a/index.html
+++ b/index.html
@@ -506,7 +506,6 @@ body {
   <div class="content">
     <div class="page-title">
       <h1>お問い合わせ</h1>
-      <p>書籍に関するご質問やご意見をお聞かせください</p>
     </div>
 
     <!-- 書籍選択 -->
@@ -523,12 +522,12 @@ body {
             <option value="ひのまる構図">ひのまる構図</option>
             <option value="黒子を星座に">黒子を星座に</option>
             <option value="RPGさんぽ概説">RPGさんぽ概説</option>
-            <option value="日本の顔スポット">日本の顔スポット</option>
+            <option value="日本の鏡スポット">日本の鏡スポット</option>
             <option value="千年幸福論">千年幸福論</option>
             <option value="カレーのご飯は冷たい方が美味しい">カレーのご飯は冷たい方が美味しい</option>
             <option value="LIMINAL SPACE 100">LIMINAL SPACE 100</option>
             <option value="花火禁止区域ができるまで">花火禁止区域ができるまで</option>
-            <option value="配嫌しないために">配嫌しないために</option>
+            <option value="遅刻しないために">遅刻しないために</option>
           </select>
         </div>
 
@@ -583,7 +582,7 @@ body {
 
           <div class="form-group">
             <label for="page_number">ページ番号<span class="required">*必須</span></label>
-            <input type="number" name="page_number" id="page_number" placeholder="該当するページ番号を入力" min="1">
+            <input type="number" name="page_number" id="page_number" placeholder="半角数字6桁 例）p.2-3が落丁していたら002003" min="1">
           </div>
         </div>
 
