--- a/index.html
+++ b/index.html
@@ -581,8 +581,8 @@ body {
           </div>
 
           <div class="form-group">
-            <label for="page_number">ページ番号<span class="required">*必須</span></label>
-            <input type="number" name="page_number" id="page_number" placeholder="半角数字6桁 例）p.2-3が落丁していたら002003" min="1">
+            <label for="page_number">ページ番号<span class="required">*必須</span><br>例）p.2-3が落丁していたら「002003」と入力してください。</label>
+            <input type="number" name="page_number" id="page_number" placeholder="半角数字6桁" min="1">
           </div>
         </div>
 
