--- a/index.html
+++ b/index.html
@@ -664,6 +664,12 @@ body {
             </form>
           </div>
         </header>
+        <nav style="text-align: center; padding: 1em 0; background-color: #f0f0f0; flex-shrink: 0; overflow-x: auto; box-sizing: border-box; width: 100%;">
+          <a href="https://hazamashobo.github.io/main/index.html" style="color: #003366; margin: 0 1em; text-decoration: none; font-weight: bold;">ホーム</a>
+          <a href="https://hazamashobo.github.io/company/index.html" style="color: #003366; margin: 0 1em; text-decoration: none; font-weight: bold;">狭間書房について</a>
+          <a href="https://hazamashobo.github.io/books/index.html" style="color: #003366; margin: 0 1em; text-decoration: none; font-weight: bold;">刊行物</a>
+          <a href="https://hazamashobo.github.io/contact/index.html" style="color: #32a9cd; margin: 0 1em; text-decoration: none; font-weight: bold; border-bottom: 2px solid #32a9cd;">お問い合わせ</a>
+        </nav>
         <div style="flex: 1; display: flex; align-items: center; justify-content: center; padding: 2em;">
           <div style="max-width:600px; width:100%; text-align:center;">
             <div style="background:linear-gradient(135deg, #f8fbfc 0%, #e8f4f8 100%); padding:3em; border-radius:12px; border:2px solid #32a9cd;">
@@ -704,6 +710,12 @@ body {
             </form>
           </div>
         </header>
+        <nav style="text-align: center; padding: 1em 0; background-color: #f0f0f0; flex-shrink: 0; overflow-x: auto; box-sizing: border-box; width: 100%;">
+          <a href="https://hazamashobo.github.io/main/index.html" style="color: #003366; margin: 0 1em; text-decoration: none; font-weight: bold;">ホーム</a>
+          <a href="https://hazamashobo.github.io/company/index.html" style="color: #003366; margin: 0 1em; text-decoration: none; font-weight: bold;">狭間書房について</a>
+          <a href="https://hazamashobo.github.io/books/index.html" style="color: #003366; margin: 0 1em; text-decoration: none; font-weight: bold;">刊行物</a>
+          <a href="https://hazamashobo.github.io/contact/index.html" style="color: #32a9cd; margin: 0 1em; text-decoration: none; font-weight: bold; border-bottom: 2px solid #32a9cd;">お問い合わせ</a>
+        </nav>
         <div style="flex: 1; display: flex; align-items: center; justify-content: center; padding: 2em;">
           <div style="max-width:600px; width:100%; text-align:center;">
             <div style="background:linear-gradient(135deg, #f8fbfc 0%, #e8f4f8 100%); padding:3em; border-radius:12px; border:2px solid #32a9cd;">
