--- a/index.html
+++ b/index.html
@@ -556,12 +556,12 @@ body {
             <option value="ひのまる構図">ひのまる構図</option>
             <option value="黒子を星座に">黒子を星座に</option>
             <option value="RPGさんぽ概説">RPGさんぽ概説</option>
-            <option value="日本の鏡スポット">日本の鏡スポット</option>
+            <option value="日本の顔スポット">日本の顔スポット</option>
             <option value="千年幸福論">千年幸福論</option>
             <option value="カレーのご飯は冷たい方が美味しい">カレーのご飯は冷たい方が美味しい</option>
             <option value="LIMINAL SPACE 100">LIMINAL SPACE 100</option>
             <option value="花火禁止区域ができるまで">花火禁止区域ができるまで</option>
-            <option value="遅刻しないために">遅刻しないために</option>
+            <option value="配送遅刻しないために">配送遅刻しないために</option>
           </select>
         </div>
 
@@ -734,4 +734,9 @@ body {
       document.body.innerHTML = `
         <header style="display: flex; justify-content: space-between; align-items: center; padding: 1em 2em; background-color: #32a9cd; color: #fff; flex-shrink: 0; flex-wrap: wrap; gap: 1em; width: 100%; box-sizing: border-box;">
           <div style="display: flex; flex-direction: column;">
-            <h1 style="margin: 0; font-size: 3em; letter-spacing: 0.1em; line-height:
+            <h1 style="margin: 0; font-size: 3em; letter-spacing: 0.1em; line-height: 1; border: none; font-family: 'Tsunagi Gothic Black', sans-serif; font-weight: 700; color: #fff;">狭間書房</h1>
+            <p style="margin: 0; padding: 0; line-height: 1; font-size: 1em; text-align: center; color: #fff;">Hazama Publishing</p>
+          </div>
+          <div style="display: flex; align-items: center;">
+            <form action="https://hazamashobo.github.io/result/" method="get" style="display: flex; align-items: center; gap: 0.5em;">
+              <input type="text" name="q" placeholder="キーワード入力" style="padding: 4px; border: 2px solid #003366; border-radius:
