--- a/index.html
+++ b/index.html
@@ -383,12 +383,12 @@ footer {
         <option value="ひのまる構図">ひのまる構図</option>
         <option value="黒子を星座に">黒子を星座に</option>
         <option value="RPGさんぽ概説">RPGさんぽ概説</option>
-        <option value="日本の顔スポット">日本の顔スポット</option>
+        <option value="日本の鏡スポット">日本の鏡スポット</option>
         <option value="千年幸福論">千年幸福論</option>
         <option value="カレーのご飯は冷たい方が美味しい">カレーのご飯は冷たい方が美味しい</option>
         <option value="LIMINAL SPACE 100">LIMINAL SPACE 100</option>
         <option value="花火禁止区域ができるまで">花火禁止区域ができるまで</option>
-        <option value="配送遅刻しないために">配送遅刻しないために</option>
+        <option value="遅刻しないために">遅刻しないために</option>
       </select>
     </div>
 
@@ -510,8 +510,11 @@ footer {
           <div><h1 style="margin: 0; font-size: 3em; color: #fff;">狭間書房</h1><p style="margin: 0; color: #fff;">Hazama Publishing</p></div>
         </header>
         <nav style="text-align: center; padding: 1em 0; background-color: #f0f0f0; width: 100%; box-sizing: border-box;">
-          <a href="https://hazamashobo.github.io/main/index.html" style="color: #003366; margin: 0 1em; text-decoration: none;">ホーム</a>
-        </nav>
+  <a href="https://hazamashobo.github.io/main/index.html" style="color: #003366; margin: 0 1em; text-decoration: none;">ホーム</a>
+  <a href="https://hazamashobo.github.io/company/index.html" style="color: #003366; margin: 0 1em; text-decoration: none;">狭間書房について</a>
+  <a href="https://hazamashobo.github.io/books/index.html" style="color: #003366; margin: 0 1em; text-decoration: none;">刊行物</a>
+  <a href="https://hazamashobo.github.io/contact/index.html" style="color: #32a9cd; margin: 0 1em; text-decoration: none; border-bottom: 2px solid #32a9cd;">お問い合わせ</a>
+</nav>
         <div style="flex: 1; display: flex; align-items: center; justify-content: center; padding: 2em 1em;">
           <div style="max-width:600px; width:100%; text-align:center;">
             <div style="background:linear-gradient(135deg, #f8fbfc 0%, #e8f4f8 100%); padding:2em 1.5em; border-radius:12px; border:2px solid #32a9cd;">
@@ -534,9 +537,12 @@ footer {
         <header style="display: flex; justify-content: space-between; align-items: center; padding: 1em 2em; background-color: #32a9cd; color: #fff; flex-shrink: 0; flex-wrap: wrap; gap: 1em; width: 100%; box-sizing: border-box;">
           <div><h1 style="margin: 0; font-size: 3em; color: #fff;">狭間書房</h1><p style="margin: 0; color: #fff;">Hazama Publishing</p></div>
         </header>
-        <nav style="text-align: center; padding: 1em 0; background-color: #f0f0f0; width: 100%; box-sizing: border-box;">
-          <a href="https://hazamashobo.github.io/main/index.html" style="color: #003366; margin: 0 1em; text-decoration: none;">ホーム</a>
-        </nav>
+       <nav style="text-align: center; padding: 1em 0; background-color: #f0f0f0; width: 100%; box-sizing: border-box;">
+  <a href="https://hazamashobo.github.io/main/index.html" style="color: #003366; margin: 0 1em; text-decoration: none;">ホーム</a>
+  <a href="https://hazamashobo.github.io/company/index.html" style="color: #003366; margin: 0 1em; text-decoration: none;">狭間書房について</a>
+  <a href="https://hazamashobo.github.io/books/index.html" style="color: #003366; margin: 0 1em; text-decoration: none;">刊行物</a>
+  <a href="https://hazamashobo.github.io/contact/index.html" style="color: #32a9cd; margin: 0 1em; text-decoration: none; border-bottom: 2px solid #32a9cd;">お問い合わせ</a>
+</nav>
         <div style="flex: 1; display: flex; align-items: center; justify-content: center; padding: 2em 1em;">
           <div style="max-width:600px; width:100%; text-align:center;">
             <div style="background:linear-gradient(135deg, #f8fbfc 0%, #e8f4f8 100%); padding:2em 1.5em; border-radius:12px; border:2px solid #32a9cd;">
