--- a/index.html
+++ b/index.html
@@ -519,13 +519,13 @@ footer {
           <div style="max-width:600px; width:100%; text-align:center;">
             <div style="background:linear-gradient(135deg, #f8fbfc 0%, #e8f4f8 100%); padding:2em 1.5em; border-radius:12px; border:2px solid #32a9cd;">
               <h1 style="color:#003366; font-size:2em; margin-bottom:1em;">落丁部分のPDFを送信しました</h1>
-              <p style="color:#32a9cd; font-size:1.1em; margin-bottom:2em;">下記のボタンからご確認いただけます。</p>
+              <p style="color:#32a9cd; font-size:1.1em; margin-bottom:2em;">下記のボタンから<br>ご確認いただけます。</p>
               <button onclick="window.location.href='https://acrobat.adobe.com/id/urn:aaid:sc:AP:1e604728-298e-4c7d-aaf9-66f5996ba6f7'" style="background:linear-gradient(135deg, #32a9cd 0%, #267fa1 100%); color:white; border:none; padding:1em 2em; font-size:1em; border-radius:25px; cursor:pointer; margin-bottom:1em; width:100%; box-sizing: border-box;">PDFを確認する</button>
               <button onclick="window.location.href='https://hazamashobo.github.io/main/index.html'" style="background:transparent; color:#32a9cd; border:2px solid #32a9cd; padding:0.8em 2em; font-size:1em; border-radius:25px; cursor:pointer; width:100%; box-sizing: border-box;">ホームに戻る</button>
             </div>
           </div>
         </div>
-        <footer style="background-color: #32a9cd; color: #ffffff; text-align: center; padding: 1em; flex-shrink: 0; margin-top: auto; width: 100%; box-sizing: border-box;"><p style="margin: 0;">© 2025 狭間書房</p></footer>
+        <footer style="background-color: #32a9cd; color: #ffffff; text-align: center; padding: 1em; flex-shrink: 0; margin-top: auto; width: 100%; box-sizing: border-box;"><p style="margin: 0;">© 2025 狭間書房　（5/33）</p></footer>
       `;
       document.body.style.display = 'flex';
       document.body.style.flexDirection = 'column';
@@ -552,7 +552,7 @@ footer {
             </div>
           </div>
         </div>
-        <footer style="background-color: #32a9cd; color: #ffffff; text-align: center; padding: 1em; flex-shrink: 0; margin-top: auto; width: 100%; box-sizing: border-box;"><p style="margin: 0;">© 2025 狭間書房</p></footer>
+        <footer style="background-color: #32a9cd; color: #ffffff; text-align: center; padding: 1em; flex-shrink: 0; margin-top: auto; width: 100%; box-sizing: border-box;"><p style="margin: 0;">© 2025 狭間書房　（-/33）</p></footer>
       `;
       document.body.style.display = 'flex';
       document.body.style.flexDirection = 'column';
