--- a/index.html
+++ b/index.html
@@ -22,108 +22,115 @@ body {
   line-height: 1.8;
 }
 
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1em 2em;
-  background-color: #32a9cd;
-  color: #fff;
-  flex-shrink: 0;
-  gap: 2em;
-  box-sizing: border-box;
-  width: 100%;
-}
+    /* ヘッダー */
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1em 2em;
+      background-color: #32a9cd;
+      color: #fff;
+      flex-shrink: 0;
+      gap: 2em;
+      box-sizing: border-box;
+      width: 100%;
+    }
+    .title-wrapper {
+      display: flex;
+      flex-direction: column;
+    }
+    .title-wrapper a {
+      text-decoration: none;
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      cursor: pointer;
+    }
+    .title-wrapper a:hover h1 {
+      opacity: 0.8;
+      transition: opacity 0.3s ease;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 3em;
+      letter-spacing: 0.1em;
+      line-height: 1;
+      border: none;
+      font-family: 'Tsunagi Gothic Black', sans-serif;
+      font-weight: 700;
+    }
+    .subtitle {
+      margin: 0;
+      padding: 0;
+      line-height: 1;
+      font-size: 1em;
+      text-align: center;
+      color: #fff;
+    }
 
-.title-wrapper {
-  display: flex;
-  flex-direction: column;
-}
+    /* 検索 */
+    .search {
+      display: flex;
+      align-items: center;
+      gap: 0.5em;
+      flex-shrink: 0;
+      margin-left: auto;
+    }
+    .search form {
+      display: flex;
+      align-items: center;
+      gap: 0.5em;
+    }
+    .search input {
+      padding: 4px;
+      border: 2px solid #003366;
+      border-radius: 4px;
+      width: 150px;
+      background-color: #fff;
+      color: #003366;
+    }
+    .search input::placeholder {
+      color: #003366aa;
+    }
+    .search button {
+      padding: 4px 6px;
+      border-radius: 4px;
+      border: none;
+      background-color: #003366;
+      color: #fff;
+      cursor: pointer;
+      white-space: nowrap;
+      flex-shrink: 0;
+    }
+    .search button:hover {
+      background-color: #001f33;
+    }
 
-.title-wrapper a {
-  text-decoration: none;
-  color: #fff;
-  display: flex;
-  flex-direction: column;
-  cursor: pointer;
-}
-
-header h1 {
-  margin: 0;
-  font-size: 3em;
-  letter-spacing: 0.1em;
-  line-height: 1;
-  border: none;
-  font-family: 'Tsunagi Gothic Black', sans-serif;
-  font-weight: 700;
-}
-
-.subtitle {
-  margin: 0;
-  padding: 0;
-  line-height: 1;
-  font-size: 1em;
-  text-align: center;
-  color: #fff;
-}
-
-.search {
-  display: flex;
-  align-items: center;
-  gap: 0.5em;
-  flex-shrink: 0;
-  margin-left: auto;
-}
-
-.search form {
-  display: flex;
-  align-items: center;
-  gap: 0.5em;
-}
-
-.search input {
-  padding: 4px;
-  border: 2px solid #003366;
-  border-radius: 4px;
-  width: 150px;
-  background-color: #fff;
-  color: #003366;
-}
-
-.search button {
-  padding: 4px 6px;
-  border-radius: 4px;
-  border: none;
-  background-color: #003366;
-  color: #fff;
-  cursor: pointer;
-  white-space: nowrap;
-  flex-shrink: 0;
-}
-
-nav {
-  text-align: center;
-  padding: 1em 0;
-  background-color: #f0f0f0;
-  flex-shrink: 0;
-  overflow-x: auto;
-  box-sizing: border-box;
-  width: 100%;
-}
-
-nav a {
-  color: #003366;
-  margin: 0 1em;
-  text-decoration: none;
-  font-weight: bold;
-  display: inline-block;
-  white-space: nowrap;
-}
-
-nav a.active {
-  color: #32a9cd;
-  border-bottom: 2px solid #32a9cd;
-}
+    /* ナビゲーション */
+    nav {
+      text-align: center;
+      padding: 1em 0;
+      background-color: #f0f0f0;
+      flex-shrink: 0;
+      overflow-x: auto;
+      box-sizing: border-box;
+      width: 100%;
+    }
+    nav a {
+      color: #003366;
+      margin: 0 1em;
+      text-decoration: none;
+      font-weight: bold;
+      display: inline-block;
+      white-space: nowrap;
+    }
+    nav a:hover {
+      color: #32a9cd;
+    }
+    nav a.active {
+      color: #32a9cd;
+      border-bottom: 2px solid #32a9cd;
+    }
 
 .content {
   max-width: 1000px;
